--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
                 <div class="portfolio-content">
                     <div class="row">
-                        <img src="./images/Project1.png">
+                        <img src="./images/Practice3.png">
                         <div class="layer">
                             <h5>Weather App</h5>
                             <p>The Weather Detection project is designed to
@@ -231,7 +231,7 @@
                     </div>
 
                     <div class="row">
-                        <img src="./images/Project2.png">
+                        <img src="./images/Practice2.png">
                         <div class="layer">
                             <h5>To-Do List</h5>
                             <p>The To-Do List project is a web application designed
@@ -240,12 +240,12 @@
                                 an interactive user interface for adding, editing, and
                                 deleting tasks.
                             </p>
-                            <a href="#"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+                            <a href="#"><i class='bx bx-link-external' style="color: rgb(226, 232, 238);"></i></a>
                         </div>
                     </div>
 
                     <div class="row">
-                        <img src="./images/Project3.png">
+                        <img src="./images/quiz app.jpg">
                         <div class="layer">
                             <h5>Quiz App</h5>
                             <p>The Quiz App project is a web application designed to provide
