photos path changes

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     </div>
 
                     <div class="row">
-                        <img src="./images/Practice2.png">
+                        <img src="./images/practice2.jpg">
                         <div class="layer">
                             <h5>To-Do List</h5>
                             <p>The To-Do List project is a web application designed
