--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
                 <div class="portfolio-content">
                     <div class="row">
-                        <img src="./images/Practice3.png">
+                        <img src="./images/Project1.png">
                         <div class="layer">
                             <h5>Weather App</h5>
                             <p>The Weather Detection project is designed to
@@ -231,7 +231,7 @@
                     </div>
 
                     <div class="row">
-                        <img src="./images/practice2.jpg">
+                        <img src="./images/Project2.png">
                         <div class="layer">
                             <h5>To-Do List</h5>
                             <p>The To-Do List project is a web application designed
@@ -245,7 +245,7 @@
                     </div>
 
                     <div class="row">
-                        <img src="./images/quiz app.jpg">
+                        <img src="./images/Project3.png">
                         <div class="layer">
                             <h5>Quiz App</h5>
                             <p>The Quiz App project is a web application designed to provide
